# anchor-lints

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
anchor-lints-utils/: Cargo.toml
anchor-lints-utils/src/: cpi_types.rs  diag_items.rs  lib.rs  mir_analyzer.rs  models.rs  utils.rs
anchor-lints-utils/src/mir_analyzer/: account_extraction.rs  cpi_context.rs  initialization.rs  local_resolution.rs  mod.rs  nested_arguments.rs  parameter_analysis.rs  type_analysis.rs  types.rs
anchor-lints-utils/src/utils/: account_constraints.rs  account_extraction.rs  account_types.rs  hir_utils.rs  mir_analysis.rs  mod.rs  param_extraction.rs  pda_detection.rs  string_extraction.rs  type_checking.rs
lints/: Cargo.toml  rust-toolchain.toml
lints/arbitrary_cpi_call/: Cargo.toml  README.md
lints/arbitrary_cpi_call/src/: lib.rs  models.rs  utils.rs
lints/arbitrary_cpi_call/tests/test_program/: Cargo.toml
lints/arbitrary_cpi_call/tests/test_program/src/: lib.rs
lints/ata_should_use_init_if_needed/: Cargo.toml  README.md
lints/ata_should_use_init_if_needed/src/: lib.rs
lints/ata_should_use_init_if_needed/tests/test_program/: Cargo.toml
lints/ata_should_use_init_if_needed/tests/test_program/src/: lib.rs
lints/cpi_no_result/: Cargo.toml  README.md
lints/cpi_no_result/src/: lib.rs
lints/cpi_no_result/tests/test_program/: Cargo.toml
lints/direct_lamport_cpi_dos/: Cargo.toml  README.md
lints/direct_lamport_cpi_dos/src/: lib.rs  utils.rs
lints/direct_lamport_cpi_dos/tests/test_program/: Cargo.toml
lints/duplicate_mutable_accounts/: Cargo.toml  README.md
lints/duplicate_mutable_accounts/src/: lib.rs  models.rs  utils.rs
lints/duplicate_mutable_accounts/tests/test_program/: Cargo.toml
lints/example_lint/: Cargo.toml
lints/example_lint/src/: lib.rs
lints/missing_account_field_init/: Cargo.toml  README.md
lints/missing_account_field_init/src/: lib.rs
lints/missing_account_field_init/src/utils/: account_extraction.rs  field_analysis.rs  mir_analysis.rs  mod.rs  name_resolution.rs  nested_functions.rs  types.rs
lints/missing_account_field_init/tests/test_program/: Cargo.toml
lints/missing_account_field_init/tests/test_program/src/: lib.rs
lints/missing_account_reload/: Cargo.toml  rust-toolchain
lints/missing_account_reload/src/: lib.rs  models.rs  utils.rs
lints/missing_account_reload/src/utils/: extraction.rs  mir.rs  mod.rs  nested.rs  paths.rs
lints/missing_account_reload/tests/test_program/: CONTRIBUTING.md  Cargo.toml
lints/missing_account_reload/tests/test_program/src/: lib.rs
lints/missing_account_reload/ui/: missing_account_reload.rs  missing_account_reload.stderr
lints/missing_mut_constraint/: Cargo.toml  README.md
lints/missing_mut_constraint/src/: lib.rs
lints/missing_mut_constraint/tests/test_program/: Cargo.toml
lints/missing_mut_constraint/tests/test_program/src/: lib.rs
lints/missing_owner_check/: Cargo.toml  README.md
lints/missing_owner_check/src/: lib.rs  utils.rs
lints/missing_owner_check/tests/test_program/: Cargo.toml
lints/missing_signer_validation/: Cargo.toml  README.md
lints/missing_signer_validation/src/: cpi_rules.rs  lib.rs  utils.rs
lints/missing_signer_validation/tests/test_program/: Cargo.toml
lints/overconstrained_seed_account/: Cargo.toml  README.md
lints/overconstrained_seed_account/src/: checks.rs  lib.rs
lints/overconstrained_seed_account/tests/test_program/: Cargo.toml
lints/pda_signer_account_overlap/: Cargo.toml  README.md
lints/pda_signer_account_overlap/src/: lib.rs  pda_analyzer.rs  utils.rs
lints/pda_signer_account_overlap/tests/test_program/: Cargo.toml
lints/pda_signer_account_overlap/tests/test_program/src/: lib.rs
lints/unsafe_pyth_price_account/: Cargo.toml  README.md
lints/unsafe_pyth_price_account/src/: checks.rs  lib.rs
lints/unsafe_pyth_price_account/tests/test_program/: Cargo.toml
tests/: Cargo.toml  lint_tests.rs
tests/arbitrary_cpi_call/: Cargo.toml
tests/arbitrary_cpi_call/src/: lib.rs
tests/ata_should_use_init_if_needed/: Cargo.toml
tests/cpi_no_result/: Cargo.toml
tests/cpi_no_result/src/: lib.rs
tests/direct_lamport_cpi_dos/: Cargo.toml
tests/direct_lamport_cpi_dos/src/: lib.rs
tests/duplicate_mutable_accounts/: Cargo.toml
tests/duplicate_mutable_accounts/src/: lib.rs
tests/missing_account_field_init/: Cargo.toml
tests/missing_account_reload_tests/: CONTRIBUTING.md  Cargo.toml
tests/missing_account_reload_tests/src/: lib.rs
tests/missing_owner_check/: Cargo.toml
tests/missing_owner_check/src/: lib.rs
tests/missing_signer_validation/: Cargo.toml
tests/missing_signer_validation/src/: lib.rs
tests/overconstrained_seed_account/: Cargo.toml
tests/overconstrained_seed_account/src/: lib.rs
tests/pda_signer_account_overlap/: Cargo.toml
tests/unsafe_pyth_price_account/: Cargo.toml
tests/unsafe_pyth_price_account/src/: lib.rs
