[package]
name = "anchor-lints"
version = "0.1.0"
edition = "2024"
authors = ["Anchor Contributors"]
publish = false

[workspace]
members = ["anchor-lints-utils", "lints/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Anchor Contributors"]
publish = false

[workspace.dependencies]
anchor-lints-utils = { path = "anchor-lints-utils" }
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "20ce69b9a63bcd2756cd906fe0964d1e901e042a" }
dylint_linting = "5.0.0"
dylint_testing = "5.0.0"
regex = "1.12.2"

[dependencies]
regex = { workspace = true }
tokio = { version = "1.48.0", features = ["fs", "rt-multi-thread", "macros"] }
anyhow = "1.0.100"
