[package]
name = "anchor-lints"
version = "0.1.0"
edition = "2024"
authors = ["Anchor Contributors"]
publish = false

[workspace]
members = [
    "anchor-lints-utils",
    "lints/arbitrary_cpi_call",
    "lints/duplicate_mutable_accounts",
    "lints/example_lint",
    "lints/missing_account_reload",
    "lints/cpi_no_result",
    "lints/pda_signer_account_overlap",
    "lints/missing_signer_validation",
    "lints/missing_owner_check",
    "lints/missing_account_field_init",
    "lints/ata_should_use_init_if_needed",
    "lints/direct_lamport_cpi_dos",
    "lints/overconstrained_seed_account",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Anchor Contributors"]
publish = false

[workspace.dependencies]
anchor-lints-utils = { path = "anchor-lints-utils" }
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "20ce69b9a63bcd2756cd906fe0964d1e901e042a" }
dylint_linting = "5.0.0"
dylint_testing = "5.0.0"
regex = "1.12.2"

[dependencies]
regex = { workspace = true }
tokio = { version = "1.48.0", features = ["fs", "rt-multi-thread", "macros"] }
anyhow = "1.0.100"
