# All lint tests belong to this workspace, allowing them to share a lockfile and target directory

[workspace]
members = ["../lints/*/tests/test_program"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { git = "https://github.com/jamie-osec/anchor.git", rev = "939b843" }
anchor-spl = { git = "https://github.com/jamie-osec/anchor.git", rev = "939b843" }
