[package]
name = "arbitrary_cpi_call"
version.workspace = true
edition.workspace = true
publish = false
authors = ["authors go here"]
description = "Detects potential arbitrary CPI calls where the program ID appears to be user-controlled without validation."

[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lints-utils.workspace = true
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[lints]
workspace = true