[package]
name = "duplicate_mutable_accounts"
version = "0.1.0"
authors = ["authors go here"]
description = "Detects duplicate mutable account usage where the same account type is passed into multiple mutable parameters without constraint checks."
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "20ce69b9a63bcd2756cd906fe0964d1e901e042a" }
dylint_linting = "5.0.0"
regex = "1.12.2"

[dev-dependencies]
dylint_testing = "5.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
