[package]
name = "duplicate_mutable_accounts"
version.workspace = true
edition.workspace = true
publish = false
authors = ["authors go here"]
description = "Detects duplicate mutable account usage where the same account type is passed into multiple mutable parameters without constraint checks."

[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lints-utils.workspace = true
clippy_utils.workspace = true
dylint_linting.workspace = true
regex.workspace = true

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
