[package]
name = "missing_account_reload"
version.workspace = true
edition.workspace = true
publish = false
authors = ["authors go here"]
description = "description goes here"

[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lints-utils.workspace = true
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
