[package]
name = "missing_mut_constraint"
version.workspace = true
edition.workspace = true
publish = false
authors = ["authors go here"]
description = "Detects accounts that are mutated in the instruction but not declared with #[account(mut)]"

[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lints-utils.workspace = true
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[lints]
workspace = true
