[package]
name = "overconstrained_seed_account"
version.workspace = true
edition.workspace = true
publish = false
authors = ["authors go here"]
description = "Detects seed-only accounts overconstrained as SystemAccount in non-init instructions"

[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lints-utils.workspace = true
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

