[package]
name = "pda_signer_account_overlap"
version.workspace = true
edition.workspace = true
publish = false
authors = ["authors go here"]
description = "Detects when user-controlled accounts (UncheckedAccount/Option) are passed to CPIs that use PDA signers, which could lead to PDA initialization vulnerabilities."

[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lints-utils.workspace = true
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[lints]
workspace = true
