[package]
name = "unsafe_pyth_price_account"
version.workspace = true
edition.workspace = true
publish = false
authors = ["authors go here"]
description = "Detects unsafe usage of Pyth PriceUpdateV2 accounts without canonical source validation or monotonic publish time enforcement"

[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lints-utils.workspace = true
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[lints]
workspace = true
