[package]
name = "cpi_no_result_test_program"
version = "0.1.0"
edition = "2021"
workspace = "../../../../tests"


[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lang = { git = "https://github.com/jamie-osec/anchor", rev = "939b843" }
anchor-spl = { git = "https://github.com/jamie-osec/anchor", rev = "939b843" }

