[package]
name = "pda_signer_account_overlap_test_program"
version = "0.1.0"
edition = "2021"
workspace = "../../../../tests"


[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lang = { git = "https://github.com/jamie-osec/anchor.git", branch = "anchor-lint" }
anchor-spl = { git = "https://github.com/jamie-osec/anchor.git", branch = "anchor-lint" }
